cluster/infrastructure/dev/couchdb/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchdb
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - couch.dev.meba.xyz
      secretName: tls-couch
  rules:
  - host: couch.dev.meba.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: couchdb-service
              port:
                number: 5984
